<resources>
    <string name="app_name">Ripe</string>
    <string name="login_fb">Sign in with Facebook</string>
    <string name="facebook_app_id">2473896399320559</string>
    <string name="fb_login_protocol_scheme">fb2473896399320559</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_upload">Upload</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_groups">Groups</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_title">TitleActivity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="selected_video">selected_video</string>

</resources>
