<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/selector_feed"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/selector_upload"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/selector_leaderboard"
        android:title="@string/title_leaderboard" />
    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/selector_groups"
        android:title="@string/title_groups" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/selector_profile"
        android:title="@string/title_profile" />

</menu>
